# chaosControl

./: CMakeLists.txt  README
etc/: .directory  plot.py
include/: bif.h  chua.h  rPlot.h  rossler.h
src/: bif.cpp  chua.cpp  rossler.cpp
test/: bD.cpp  find.cpp  trajectory.cpp
